force-app/main/default/objects/WaitingList__c/WaitingList__c.object-meta.xml
<CustomObject>
    <description>Manages waiting lists</description>
    <label>Waiting List</label>
    <nameField>
        <displayFormat>WL-{0000000}</displayFormat>
        <label>Waiting List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waiting Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>