force-app/main/default/objects/WaitingList__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account is related with the entry</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Waiting Lists</relationshipLabel>
    <relationshipName>Waiting_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>