force-app/main/default/objects/WaitingList__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has an Appointment?</label>
    <type>Checkbox</type>
</CustomField>