force-app/main/default/objects/WaitingList__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office</label>
    <referenceTo>SALES_OFFICE__c</referenceTo>
    <relationshipLabel>Waiting Lists</relationshipLabel>
    <relationshipName>Waiting_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>