force-app/main/default/objects/WaitingList__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONQUEUE</fullName>
                <default>true</default>
                <label>On queue</label>
            </value>
            <value>
                <fullName>ASSIGNED</fullName>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>INPROGRESS</fullName>
                <label>In progress</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>LOST</fullName>
                <label>Lost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>