force-app/main/default/objects/WaitingList__c/fields/transformed__c.field-meta.xml
<CustomField>
    <fullName>transformed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transformed</label>
    <type>Checkbox</type>
</CustomField>